// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formats aliased unknown export 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Attempted import error: 'bar' is not exported from './AppUnknownExport' (imported as 'bar2').


",
  "stdout": "",
}
`;

exports[`formats babel syntax error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Syntax error: Unterminated JSX contents (8:12)

   6 |       <div>
   7 |         <span>
>  8 |       </div>
     |             ^
   9 |     );
  10 |   }
  11 | }


",
  "stdout": "",
}
`;

exports[`formats typescript syntax error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Syntax error: Unterminated JSX contents (8:12)

   6 |       <div>
   7 |         <span>
>  8 |       </div>
     |             ^
   9 |     );
  10 |   }
  11 | }


",
  "stdout": "",
}
`;

exports[`formats css syntax error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/AppCss.css
Syntax error: Unexpected } (3:2)

  1 | .App {
  2 |   color: red;
> 3 | }}
    |  ^
  4 |


",
  "stdout": "",
}
`;

exports[`formats file not found error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Cannot find file './ThisFileSouldNotExist' in './src'.


",
  "stdout": "",
}
`;

exports[`formats missing package 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Cannot find module: 'unknown-package'. Make sure this package is installed.

You can install this package by running: npm install unknown-package.


",
  "stdout": "",
}
`;

exports[`formats no default export 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Attempted import error: './ExportNoDefault' does not contain a default export (imported as 'myImport').


",
  "stdout": "",
}
`;

exports[`formats out of scope error 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
You attempted to import ../OutOfScopeImport which falls outside of the project src/ directory. Relative imports outside of src/ are not supported.
You can either move it inside src/, or add a symlink to it from project's node_modules/.


",
  "stdout": "",
}
`;

exports[`formats unknown export 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/App.js
Attempted import error: 'bar' is not exported from './AppUnknownExport'.


",
  "stdout": "",
}
`;

exports[`helps when users tries to use sass 1`] = `
Object {
  "stderr": "Creating an optimized production build...
Failed to compile.

./src/AppSass.scss
To import Sass files, you first need to install node-sass.
Run \`npm install node-sass\` or \`yarn add node-sass\` inside your workspace.


",
  "stdout": "",
}
`;
